# github-notification-auto-done-skill

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/github-notification-auto-done/: SKILL.md
scripts/: github_notification_auto_done.py
src/github_notification_auto_done/: __init__.py  __main__.py  cli.py  client.py  config.py  logging_setup.py  models.py  processor.py
tests/: conftest.py  test_client.py  test_config.py  test_integration.py  test_processor.py
